# rust-actixweb-minimal

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md
.cargo/: config.toml
src/: app_controller.rs  main.rs
src/core/: repo.rs
src/domain/: age.rs  email.rs  mod.rs  user.rs
src/features/: create_user.rs  list_user.rs  mod.rs  router.rs
src/middlewares/: auth.rs
src/repositories/: user_repository.rs
