[package]
name = "ddd-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["v4"] }
